--- a/Miyu/Base.lproj/Main.storyboard
+++ b/Miyu/Base.lproj/Main.storyboard
@@ -33,6 +33,9 @@
                                 <rect key="frame" x="71" y="469" width="38" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Login"/>
+                                <connections>
+                                    <action selector="loginDidTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="PqS-7G-kFq"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xzf-Pl-Fei">
                                 <rect key="frame" x="231" y="469" width="57" height="30"/>
