--- a/Miyu/Feature/Homepage/HomepageViewController.storyboard
+++ b/Miyu/Feature/Homepage/HomepageViewController.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Ogx-fG-Vhg">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -18,20 +18,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hO9-oR-hhu">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                                <items>
-                                    <navigationItem title="FEED" id="dlY-CB-epR">
-                                        <barButtonItem key="leftBarButtonItem" title="burger" id="6gk-bS-j24">
-                                            <connections>
-                                                <action selector="burgerMenutapped:" destination="Ogx-fG-Vhg" id="y5t-Mg-y2e"/>
-                                            </connections>
-                                        </barButtonItem>
-                                    </navigationItem>
-                                </items>
-                            </navigationBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="dYD-l5-zH8">
-                                <rect key="frame" x="0.0" y="44" width="375" height="623"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleAspectFit" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="homepageCell" id="JdL-pE-Qnw" customClass="HomepageTableViewCell" customModule="Simi" customModuleProvider="target">
@@ -48,26 +36,48 @@
                                     <outlet property="delegate" destination="Ogx-fG-Vhg" id="v3Q-kB-Nvm"/>
                                 </connections>
                             </tableView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZNQ-OJ-Dw2">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <items>
+                                    <barButtonItem title="Item" image="burger" id="Oao-HR-mpG">
+                                        <connections>
+                                            <action selector="menuTapped:" destination="Ogx-fG-Vhg" id="fbz-40-ltC"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="HOME" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ooY-pV-zuU">
+                                <rect key="frame" x="163" y="32" width="49.5" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.85252730139704891" green="1" blue="0.73520657969411896" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
-                            <constraint firstItem="dYD-l5-zH8" firstAttribute="top" secondItem="hO9-oR-hhu" secondAttribute="bottom" id="GQd-BS-bSz"/>
-                            <constraint firstItem="229-3b-bvJ" firstAttribute="trailing" secondItem="hO9-oR-hhu" secondAttribute="trailing" id="JWc-Mx-VAX"/>
-                            <constraint firstItem="hO9-oR-hhu" firstAttribute="leading" secondItem="229-3b-bvJ" secondAttribute="leading" id="V3W-B9-QH5"/>
+                            <constraint firstItem="ZNQ-OJ-Dw2" firstAttribute="top" secondItem="Pef-7k-UEp" secondAttribute="top" constant="20" id="26s-xv-zzH"/>
+                            <constraint firstItem="ooY-pV-zuU" firstAttribute="centerY" secondItem="ZNQ-OJ-Dw2" secondAttribute="centerY" id="44A-QK-7e1"/>
+                            <constraint firstItem="ooY-pV-zuU" firstAttribute="centerX" secondItem="ZNQ-OJ-Dw2" secondAttribute="centerX" id="Xes-bw-MOM"/>
                             <constraint firstItem="dYD-l5-zH8" firstAttribute="leading" secondItem="229-3b-bvJ" secondAttribute="leading" id="awC-4U-NkX"/>
                             <constraint firstItem="229-3b-bvJ" firstAttribute="trailing" secondItem="dYD-l5-zH8" secondAttribute="trailing" id="esu-0n-cOW"/>
-                            <constraint firstItem="229-3b-bvJ" firstAttribute="top" secondItem="hO9-oR-hhu" secondAttribute="top" constant="20" id="gwN-QJ-Egm"/>
+                            <constraint firstItem="ZNQ-OJ-Dw2" firstAttribute="trailing" secondItem="229-3b-bvJ" secondAttribute="trailing" id="mch-MJ-eAp"/>
                             <constraint firstItem="229-3b-bvJ" firstAttribute="bottom" secondItem="dYD-l5-zH8" secondAttribute="bottom" id="oKD-CE-uMr"/>
+                            <constraint firstItem="dYD-l5-zH8" firstAttribute="top" secondItem="ZNQ-OJ-Dw2" secondAttribute="bottom" id="w3z-YN-eeO"/>
+                            <constraint firstItem="ZNQ-OJ-Dw2" firstAttribute="leading" secondItem="229-3b-bvJ" secondAttribute="leading" id="zAY-ML-5bq"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="229-3b-bvJ"/>
                     </view>
+                    <navigationItem key="navigationItem" id="Sdh-jL-21w"/>
                     <connections>
                         <outlet property="tableView" destination="dYD-l5-zH8" id="6fh-TX-hQG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="y0d-RZ-kgA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-322.39999999999998" y="36.431784107946029"/>
+            <point key="canvasLocation" x="157.59999999999999" y="35.532233883058474"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="burger" width="16" height="16"/>
+    </resources>
 </document>
