--- a/Miyu/Feature/Homepage/HomepageViewController.storyboard
+++ b/Miyu/Feature/Homepage/HomepageViewController.storyboard
@@ -71,22 +71,6 @@
             </objects>
             <point key="canvasLocation" x="652" y="-85"/>
         </scene>
-        <!--Item-->
-        <scene sceneID="nhe-0s-ivT">
-            <objects>
-                <viewController id="cn7-xV-1xf" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="yTZ-vK-8PS">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.36068126307312853" green="0.40290094802092979" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                        <viewLayoutGuide key="safeArea" id="PxE-bb-h4c"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="lWf-z5-G5N"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="L6X-N2-OAs" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="652" y="603"/>
-        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="90e-ps-7Fu">
             <objects>
@@ -98,12 +82,22 @@
                     </tabBar>
                     <connections>
                         <segue destination="Ogx-fG-Vhg" kind="relationship" relationship="viewControllers" id="C6n-I7-Uf5"/>
-                        <segue destination="cn7-xV-1xf" kind="relationship" relationship="viewControllers" id="kiU-VK-TY7"/>
+                        <segue destination="hQP-Bm-EMY" kind="relationship" relationship="viewControllers" id="kiU-VK-TY7"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9iA-zI-m8A" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-142.40000000000001" y="35.082458770614693"/>
+        </scene>
+        <!--ProfileViewController-->
+        <scene sceneID="Gcs-r7-T9e">
+            <objects>
+                <viewControllerPlaceholder storyboardName="ProfileViewController" id="hQP-Bm-EMY" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="LxV-Qa-yt3"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LBG-Qo-Wtq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="652" y="603"/>
         </scene>
     </scenes>
 </document>
